--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title: Site Title
+title: Wetlandstory
 locale: en_US
-description: Describe your website here.
+description: โครงงานเว็บไซต์เพื่อสังคมเพื่อเยาวชนท้องถิ่นจังหวัดพัทลุง
 logo: site-logo.png
 search: true
 url: http://wetlandstory.github.io/newwetlandstory/
