--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Wetlandstory
 locale: en_US
 description: โครงงานเว็บไซต์เพื่อสังคมเพื่อเยาวชนท้องถิ่นจังหวัดพัทลุง
-logo: site-logo.png
+logo: wetland.png
 search: true
 url: http://wetlandstory.github.io/newwetlandstory/
 
