--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
+  name: Wetlandstory
+  avatar: wetland1.jpg
   email: you@email.com
   disqus-shortname:
   twitter: #username
