--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: Articles
   url: /articles/
 
-- title: 
-  url: 
+- title: b=Blog 
+  url: /blog/
 
 - title: Theme Setup
   url: /theme-setup/
