--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ gems:
   - jekyll-sitemap
 
 kramdown:
-  auto_ids: false
+  auto_ids: true
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..2
