--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ owner:
   avatar: wetland1.jpg
   email: you@email.com
   disqus-shortname:
-  twitter: #username
+  twitter: Toffeesmen
   facebook: #username
-  github: #username
+  github: wetlandstory
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
