--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: Wetlandstory
+title: 
 locale: en_US
 description: โครงงานเว็บไซต์เพื่อสังคมเพื่อเยาวชนท้องถิ่นจังหวัดพัทลุง
 logo: wetland1.jpg
